# Alesis-HD24-MIDI-Controller

./: README.md  hd24_midi_controller.ino
RC-HD24/: .gitignore  Bluetooth.cpp  Bluetooth.h  CMakeLists.txt  Info.plist.in  RCHD24.cpp  RCHD24.h  README.md  Tcp.cpp  Tcp.h  brun.sh  build-android.sh  build.sh  clean.sh  main.cpp  run.sh
RC-HD24/android/: AndroidManifest.xml
